# FailSol-Backend

./: .gitignore  Cargo.toml  Readme.md
src/: main.rs
src/model/: mod.rs  signature_model.rs
src/routes/: mod.rs  signature.rs  update.rs  ws.rs
src/services/: db.rs  mod.rs
src/services/ws/: lobby.rs  messages.rs  mod.rs
src/utils/: constants.rs  mod.rs
src/utils/generate_image/: generate.rs  mod.rs  process_log_message.rs  upload_pinata.rs
src/utils/transaction/: fetch_transaction.rs  mod.rs
