[package]
name = "failsol-detail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.25"
actix-files = "0.6.5"
actix-web = "4"
chrono = "0.4.37"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
image = "0.25.1"
imageproc = "0.24.0"
mongodb = "2.8.2"
pinata-sdk = "1.1.0"
serde = "1.0.197"
solana-client = "1.18.10"
solana-sdk = "1.18.10"
solana-transaction-status = "1.18.10"
serde_json = "1.0"
actix-cors = "0.7.0"
actix-web-actors = "4.3.0"
actix = "0.13.3"
uuid = "1.8.0"
